<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.weatherapp.view.city.CityViewModel" />
    </data>

    <FrameLayout
        android:id="@+id/home_framelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.city.CityFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/back_1"
            android:orientation="vertical"
            tools:context=".view.activity.Activity_HomeScreen">

            <EditText
                style="@style/TextRegular.White.20sp"
                android:id="@+id/txt_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/customsearchtext"
                android:drawableLeft="@drawable/baseline_search_24"
                android:drawablePadding="10dp"
                android:padding="15dp" />

            <ImageView
                android:id="@+id/empty1"
                mutableVisibility="@{viewModel.errorVisibility}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="270dp"
                android:src="@drawable/umbrella" />

            <TextView
                android:id="@+id/empty2"
                style="@style/TextBold.White.30sp"
                mutableText="@{viewModel.errorTitle}"
                mutableVisibility="@{viewModel.errorVisibility}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                tools:text="OOPS!" />

            <TextView
                android:id="@+id/empty3"
                style="@style/TextRegular.White.17sp"
                mutableText="@{viewModel.errorContent}"
                mutableVisibility="@{viewModel.errorVisibility}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                tools:text="No Data Found" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_search"
                adapter="@{viewModel.searchAdapter}"
                mutableVisibility="@{viewModel.searchVisibility}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />

            <ScrollView
                android:id="@+id/layout_city"
                mutableVisibility="@{viewModel.favoriteVisibility}"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview_city"
                    adapter="@{viewModel.favoriteAdapter}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </ScrollView>

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="325dp"
                android:indeterminateDrawable="@drawable/loading"
                android:visibility="gone" />
        </LinearLayout>
    </FrameLayout>
</layout>