<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="location"
            type="com.example.weatherapp.data.model.Location" />

        <variable
            name="condition"
            type="com.example.weatherapp.data.model.Condition" />

        <variable
            name="current"
            type="com.example.weatherapp.data.model.Current" />
        <variable
            name="viewModel"
            type="com.example.weatherapp.viewmodel.WeatherViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.FragmentHome"
        android:background="@color/back_1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/btn_map"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/baseline_map_24"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/btn_listcity"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/baseline_list_24"
                app:layout_constraintRight_toRightOf="parent"
                tools:ignore="MissingConstraints" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_listcity"
                tools:context=".view.activity.ActivityCityScreen">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardview_city"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:backgroundTint="@color/back_2"
                    app:cardCornerRadius="30dp"
                    android:visibility="@{viewModel.weatherVisibility}"
                    app:mutableVisibility="@{viewModel.weatherVisibility}">

                    <TextView
                        android:id="@+id/txt_locationName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:gravity="center"
                        android:hint="Ha Noi"
                        android:text="@{location.name}"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="40sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/img_icon"
                        android:layout_width="100dp"
                        android:layout_height="80dp"
                        android:layout_marginLeft="130dp"
                        android:layout_marginTop="90dp"
                        android:src="@drawable/ic_launcher_background" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="165dp"
                        android:hint="Partly Cloudy"
                        android:text="@{condition.text}"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="195dp"
                        android:hint="32"
                        android:text="@{current.temp_c}"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerview_weather_3"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginTop="250dp" />
                </androidx.cardview.widget.CardView>

<!--                <androidx.recyclerview.widget.RecyclerView-->
<!--                    android:id="@+id/recyclerview_weather_list"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="150dp"-->
<!--                    android:visibility="visible" />-->

                <ImageView
                    android:id="@+id/empty_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="230dp"
                    android:src="@drawable/sun"
                    android:visibility="@{viewModel.errorVisibility}"
                    app:mutableVisibility="@{viewModel.errorVisibility}"/>

                <TextView
                    android:id="@+id/empty_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:text="NO RESULTS"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:visibility="@{viewModel.errorVisibility}"
                    app:mutableVisibility="@{viewModel.errorVisibility}"/>

                <TextView
                    android:id="@+id/empty_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Sorry, there are no results for this search.\nPlease try another place"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:visibility="@{viewModel.errorVisibility}"
                    app:mutableVisibility="@{viewModel.errorVisibility}"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>