<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.FragmentLoading">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ProgressBar
                android:id="@+id/progressbar_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminateDrawable="@drawable/loading"
                android:layout_gravity="center"/>
        </LinearLayout>
    </FrameLayout>
</layout>