...
        android:layout_height="match_parent"
        tools:context=".view.fragment.FragmentFavouriteCity"
        android:background="@color/back_1"
        android:id="@+id/fragment_favouritecity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_favouritecity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/empty_1"
...
